# interleave-epub

./: .flaskenv  .gitignore  README.md  pyproject.toml
assets/epub_template/: stylesheet.css  tmpl_toc.ncx
inep01/: README.md
inep01/assets/epub_template/: tmpl_ch.xhtml  tmpl_content.opf  tmpl_preface.xhtml  tmpl_toc_navpoint.ncx
inep01/src/interleave_epub/: utils.py
inep01/src/interleave_epub/epub/: build_aligned_chap.py  paragraph.py  similarity.py
inep01/src/interleave_epub/flask_app/: __init__.py  asset_loader.py  routes.py
inep01/src/interleave_epub/flask_app/templates/: file_loader.html
inep01/src/interleave_epub/nlp/: cached_spacy.py
inep01/tests/: test_interleave_epub.py
inep02/: .gitignore  README.md  TODO.md  pyproject.toml
inep02/notebooks/: sample_app_run.ipynb  sample_epub_01.ipynb
inep02/src/interleave_epub/: __init__.py  utils.py
inep02/src/interleave_epub/epub/: __init__.py  chapter.py  epub.py  epub_builder.py  paragraph.py  utils.py
inep02/src/interleave_epub/flask_app/: __init__.py  livereload_app.py  render.py  routes.py  utils.py
inep02/src/interleave_epub/flask_app/templates/: align.html  base.html  index.html  learn_html_01.html  load.html
inep02/src/interleave_epub/interleave/: __init__.py  align.py  build_chap.py  constants.py  interactive.py
inep02/src/interleave_epub/nlp/: __init__.py  cached_pipe.py  local_spacy_model.py  utils.py
inep02/tests/: test_interleave_epub.py
src/interleave_epub/: utils.py
src/interleave_epub/epub/: __init__.py  build_aligned_chap.py  chapter.py  epub.py  epub_builder.py  paragraph.py  similarity.py  utils.py
src/interleave_epub/flask_app/: __init__.py  asset_loader.py  routes.py
src/interleave_epub/flask_app/templates/: align.html  base.html  index.html
src/interleave_epub/nlp/: cached_pipe.py  cached_spacy.py  utils.py
