[tool.poetry]
name = "interleave_epub"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.10"
Flask = "^2.1.2"
livereload = "<=2.5.1"
black = "^22.3.0"
python-dotenv = "^0.20.0"
transformers = {extras = ["torch"], version = "^4.20.0"}
tensorflow = "^2.9.1"
sentencepiece = "^0.1.96"
sacremoses = "^0.0.53"
pydocstyle = "^6.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
