[tool.poetry]
name = "interleave-epub"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.10"
Flask = "^2.2.2"
livereload = "^2.6.3"
black = "^22.6.0"
python-dotenv = "^0.20.0"
transformers = {extras = ["torch"], version = "^4.21.2"}
tensorflow = "^2.9.1"
sentencepiece = "^0.1.97"
spacy = "^3.4.1"
beautifulsoup4 = "^4.11.1"
sacremoses = "^0.0.53"
pydocstyle = "^6.1.1"
isort = "^5.10.1"
sentence-transformers = "^2.2.2"
numpy = "^1.23.2"
pandas = "^1.4.3"
sklearn = "^0.0"
matplotlib = "^3.5.3"
tqdm = "^4.64.0"
mypy = "^0.971"
ipykernel = "^6.15.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"
force_sort_within_sections = true 
multi_line_output = 3
